freshed-rs-macros/tests/ui/fail/component_shorthand_non_ident_html_in.stderr
error: component shorthand prop must be an identifier, e.g. {value}
  --> tests/ui/fail/component_shorthand_non_ident_html_in.rs:15:36
   |
15 |     let _ = html_ctx!(ctx, <Button {a + b}></Button>);
   |                                    ^^^^^^^
